style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root{
    --text: #0f061d;
    --background: #f6f2fc;
    --primary: #4831D4;
    --secondary: #CCF381;
    --project: #8070e1;
    
}

*{
    margin: 0;
    padding: 0;
    font-family: Poppins;
    box-sizing: border-box;
}

body{
    height: 100vh;
    width: 100%;
    background-color: var(--background);
}

.buttons-div a , .buttons-div a:visited{
    color: var(--text);
    text-decoration: none;
}

a, a:visited{
    color: var(--text);
    text-decoration: none;
}

nav #contact-link{
    color: var(--background);
}

nav h3{
    cursor: pointer;
}

nav, .nav-contents{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.nav-contents ul {
    display: flex;
    list-style: none;
    padding: 0px;
    justify-content: space-evenly;
    align-items: center;
}

.nav-contents ul li{
    padding-left: 2rem;
    font-weight: 600;
    cursor: pointer;
}

nav{
    width: 100%;
    height: 8vh;
    background-color: var(--background);
    color: var(--text);
}

#burger-menu {
    display: none;
  }

.nav-contents{
    width: 20%;
}

.portfolio-heading, .nav-btn{
    margin: 0 4vw;
}

.portfolio-heading-animation{-webkit-animation:portfolio-heading-animation 1.5s cubic-bezier(.645,.045,.355,1.000) 1s both;animation:portfolio-heading-animation 1.5s cubic-bezier(.645,.045,.355,1.000) 1s both}

@-webkit-keyframes portfolio-heading-animation{0%{letter-spacing:1em;-webkit-transform:translateZ(400px);transform:translateZ(400px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes portfolio-heading-animation{0%{letter-spacing:1em;-webkit-transform:translateZ(400px);transform:translateZ(400px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}

.nav-btn, .btn, .btn-second{
    outline: none;
    border: none;
    height: 50%;
    width: 10vw;
    font-weight: 700;
}
.nav-btn{
    background-color: var(--primary);
    border-radius: 16px 0 16px 0;
}

main{
    height: 92vh;
    background-color: var(--primary);
    color: var(--secondary);
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.main-heading-colored{
    color: var(--background);
    font-size: 3rem;
}

.buttons-div{
    height: 140px;
    display: flex;
    flex-direction: column;
}

.btn{
    background-color: var(--secondary);
    border-radius: 20px;
    width: 160px;
}
.btn-second{
    background-color: var(--background);
    width: 160px;
    border-radius: 20px;
    margin: 10px 0;
}

.projects{
    min-height: 100vh;
    background-color: var(--background);
    padding: 10px;
    text-align: center;
    margin-bottom: 100px;
}

.projects .heading{
    padding-bottom: 4rem;
}

.heading{
    margin: 0;
    margin-top: 20px;
    text-align: center;
    color: var(--text);
    font-size: 2rem;
}
.project-card-container{
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    justify-content: center;
    align-items: start;
}

.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: var(--text);
    width: 300px;
    height: 350px;
    background-color: transparent;
    border-radius: 10px;
    margin: 0;
    padding: 10px;
    background-color: var(--project);
}

.card img {
text-align: center;
display: block;
width: 100%;
height: 125px;
margin: 0px auto;
border-radius: 10px;
object-fit: contain;
}

.card h2 {
margin: 0;
color: var(--background);
}

.card p {
margin: 0;
color: var(--background);
font-size: 13px;
}

.link-container {
display: flex;
justify-content: space-around;
}

.card a {
text-decoration: none;
color: inherit;
font-weight: bold;
font-size: 1.2rem;
color: var(--background);
}

.card a:hover {
transform: scale(1.1);
}

.live-icon {
font-size: 1.5rem;
vertical-align: text-top;
}

.skills {
    min-height: 60vh;
    padding: 100px 20px;
    background-color: var(--primary);
    margin-bottom: 100px;
}

.skills-container {
    width: 50vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: start;
    gap: 10px;
    margin: 60px auto;
    padding: 10px;
    border-radius: 10px;
}
  
.skills-container .bg {
    width: 80px;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    background-color: var(--background);
}
  
.skills-container img,
#contact-div img {
    width: 50px;
    height: 50px;
}

.about {
    width: 100%;
    min-height: 60vh;
    margin: 0 auto;
    padding: 50px;
    align-items: center;
    background-color: var(--background);
    color: var(--text);
    font-size: 1rem;
    font-weight: 400;
    text-align: left;
  }

  .about-section{
    width: 70%;
    margin: 0 auto;
  }

.about h1{
    padding: 22px;
}

.about a, .about a:visited{
    color: var(--btn-color);
}


.project-discussion{
    height: 30vh;
    width: 100%;
    background-color: var(--text);
    color: var(--background);
    font-size: 2em;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 15px;
}

.start-project{
    text-align: center;
    background-color: var(--background);
    width: 200px;
    height: 190px;
    color: var(--text);
    box-shadow: -7px 5px 10px 0.1px var(--nav-color);    
}

.start-project h3{
    padding: 2.4rem;
    text-align: left;
}

.start-project h3 a,.start-project h3 a:visited{
    color: var(--text)
}
#contact {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    min-height: 30vh;
    background-color: #c48695;
    padding: 20px;
}

#contact .heading{
    color: var(--text);
}

#social-links {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 4rem;
    height: 50%;
  }

.link {
    width: 4rem;
    height: 4rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
}
  
.link:hover {
    transform: scale(1.1);
    transition: all 1s ease-in-out;
}

.link img{
    height: 5rem;
    width: 5rem;
}

footer{
    background-color: #c48695;
    color: var(--text);
    text-align: center;
    height: 5vh;
    padding: 1vh;
}

@media screen and (max-width: 720px) {
    #burger-menu {
      display: block;
      padding: 20px 20px;
      position: absolute;
      z-index: 4;
      width: 100%;
      height: 70px;
      background-color: var(--background);
    }

    .portfolio-heading{
        display: inline-block;
    }

    @-webkit-keyframes portfolio-heading-animation{0%{letter-spacing:1em;-webkit-transform:translateZ(400px);transform:translateZ(400px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes portfolio-heading-animation{0%{letter-spacing:.5em;-webkit-transform:translateZ(400px);transform:translateZ(400px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
  
    #burger-icon {
      color: var(--text);
      cursor: pointer;
      position: absolute;
      padding: 0 20px;
      right: 0;
    }
  
    #burger-menu-content {
      background-color: var(--background);
      border-radius: 5px;
      margin-top: 30px;
      margin-right: 5px;
    }
    
    main{
        padding-top: 20px;
    }
  
    .hidden {
      display: none;
    }
  
    #burger-menu-content ul {
      list-style: none;
      margin: 0;
      padding: 0;
    }
  
    #burger-menu-content ul a, #burger-menu-content .nav-btn {
      display: block;
      text-decoration: none;
      color: var(--text);
      padding: 5px 0;
      margin: 0;
      text-align: center;
      font-weight: 600;
    }

    #burger-menu-content .nav-btn{
        width: 100%;
        background-color: unset;
    }

    nav{
        display: none;
    }

    main{
        padding-left: 30px;
        flex-direction: column;
        align-items: flex-start;
    }

    main h1{
        padding-bottom: 30px;
    }

    .buttons-div{
        height: 140px;
    }
    
    .btn, .btn-second{
        height: 33%;
        width: 40vw;
        font-weight: 700;
    }

    .about{
        padding: 30px;
    }

    .about-section{
        width: 90%;
        margin: 0 auto;
    }

    .project-discussion{
        height: 30vh;    
        font-size: 1.3em;
        padding: 15px;
    }

    .start-project{
        height: 100px;
        max-width: 300px;
    }

    .start-project h3{
        padding: .8rem;
    }

    .link img{
        height: 4rem;
        width: 4rem;
    }
}  

